--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <meta name="viewport" content="width=device-width">
-    <title>Project Crescendo</title>
+<!--
+    The Sonata App promotional website homepage.
 
+    Created by Craig Hirst on 18/04/16.
+    Modified by Dylan McKee.
+-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Sonata For Android</title>
+    <link type="text/css" href="style.css" rel="stylesheet">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
-
+    <div class="full_wrap">
+        <div class="exterior-section">
+            <img id="webart" src="images/WebArt.png" alt="Web Art">
+            <div id="image_holder">
+                <img class="active" src="images/ScreenshotOne.jpg" alt="Screen1" />
+                <img src="images/ScreenshotThree.jpg" alt="Screen2" />
+                <img src="images/ScreenshotTwo.png" alt="Screen3" />
+            </div>
+            <a href="assets/app.apk" target="_blank"><img id="dl-button" src="images/google-play-badge.svg" alt="Google Play Button"></a>
+        </div>
+        <div class="footer">
+            <p><a href="about.html">FAQ</a> <span>| Sonata 2016</span></p>
+        </div>
+    </div>
 </body>
 </html>
