Front-end improvements

--- a/about.html
+++ b/about.html
@@ -1,10 +1,10 @@
+<!DOCTYPE html>
 <!--
     The Sonata App promotional website about/FAQ page.
 
     Created by Craig Hirst on 18/04/16.
     Modified by Dylan McKee.
 -->
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -20,7 +20,9 @@
     <div class="full_wrap">
         <div class="about_section">
             <div class="qa_span">
-                <span id="main_heading"><h1>FAQ</h1></span>
+                <div id="main_heading">
+                    <h1>FAQ</h1>
+                </div>
             </div>
             <div class="qa_span">
                 <h1>What is Sonata?</h1>
@@ -38,7 +40,7 @@
                     played back as sound. They can also be exported as an
                     industry standard MusicXML file, which can be uploaded
                     to our hosted API, and shared via social media including
-                    Facebook & Twitter
+                    Facebook &amp; Twitter
                 </p>
             </div>
             <div class="qa_span">
